<?xml version="1.0"?>
<package format="2">
  <name>button_controller</name>
  <version>0.1.0</version>
  <description>
    An example GUI that will publish button presses to a provided ROS topic.
  </description>
  <maintainer email="pgavriel@mail.middlesex.edu">Peter Gavriel</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>

  <exec_depend>qt_build</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>libqt4-dev</exec_depend>

</package>
