<?xml version="1.0"?>
<package format="2">
  <name>video_streamer</name>
  <version>0.1.0</version>
  <description>
    A GUI that can subscibe to and display image topics.
  </description>
  <maintainer email="pgavriel@mail.middlesex.edu">Peter Gavriel</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>qt_build</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>libqt4-dev</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
